# ray_tracer_challenge

./: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
cmake/: examples.cmake  tests.cmake
examples/: projectile_motion.cpp
include/tracer/: canvas.hpp  colors.hpp  geometry.hpp  log.hpp  math.hpp  matrixTransforms.hpp  tracer.hpp
include/tracer/actors/: surface.hpp
include/tracer/core/: lightray.hpp  material.hpp  renderers.hpp
include/tracer/core/actors/: actor.hpp  cameras.hpp  lights.hpp  object.hpp  solidbody.hpp  surface.hpp
include/tracer/geometry/: geometry.hpp  nurbs.hpp  primitives.hpp  sphere.hpp  transforms.hpp
include/tracer/geometry/nurbs/: nurbc.hpp
include/tracer/geometry/surfaces/: surfsphere.hpp  uvsurface.hpp
include/tracer/geometry/surfaces/nurbs/: nurbc.hpp  nurbs.hpp
include/tracer/image/: bitmap.hpp
src/: canvas.cpp  geometry.cpp  log.cpp  matrixTransforms.cpp  renderers.cpp  tracer.cpp
src/actors/: actors.cpp  cameras.cpp  lights.cpp
src/examples/: clockFace.cpp  projectile_motion.cpp
src/geometry/: NURBs.cpp  Sphere.cpp  primitives.cpp  surfpoint.cpp  surfsphere.cpp  transforms.cpp  uvsurface.cpp
src/geometry/nurbs/: nurbc.cpp
test/: openGL_test.cpp  testCanvas.cpp  testMatrices.cpp  testRenderers.cpp  testUtils.hpp  test_canvas.cpp  verify_tuple.cpp
test/actorTests/: testObject.cpp  testactor.cpp  testcameras.cpp  testlightsources.cpp  testsolidbodies.cpp
test/geometryTests/: testNURBContour.cpp  testPointSurface.cpp  testRay.cpp  testSphere.cpp
